# PO_validator

./: .dockerignore  .gitignore  Dockerfile  README.md  extractor.py  llm_extractor.py  main.py  pyproject.toml  requirements.txt
templates/: index.html
tests/: test_regression.py
tests/correct/: email_01.txt  erp_01.json
tests/incorrect/: erp_02.json
tests/test_00/: email_00.txt  po_validator_output_00.json
tests/test_01/: erp_01.json  po_validator_output.json
tests/test_02/: email_02.txt  erp_02.json
tests/test_03/: erp_03.json
tests/test_04/: email_04.txt  erp_04.json
tests/test_05/: email_05.txt  erp_05.json
